--- a/glossar.tex
+++ b/glossar.tex
@@ -3,6 +3,7 @@
 \newacronym{api}{API}{\textit{application programming interface}}
 \newacronym{alu}{ALU}{\textit{arithmetic logic unit}}
 \newacronym{apu}{APU}{\textit{accelerated processing unit}}
+\newacronym{asic}{ASIC}{\textit{application-specific integrated circuit}}
 \newacronym{blas}{BLAS}{\textit{Basic Linear Algebra Subprograms}}
 \newacronym{clb}{CLB}{\textit{configurable logic block}}
 \newacronym{cmt}{CMT}{\textit{clock management tile}}
@@ -11,10 +12,13 @@
 \newacronym{fpga}{FPGA}{\textit{field programmable gate array}}
 \newacronym{gpgpu}{GPGPU}{\textit{general-purpose computing on graphics processing units}}
 \newacronym{gpu}{GPU}{\textit{graphics processing unit}}
+\newacronym{hls}{HLS}{\textit{High-Level-Synthese}}
 \newacronym{hpc}{HPC}{\textit{high-performance computing}}
 \newacronym{ii}{II}{\textit{initiation interval}}
 \newacronym{iob}{IOB}{\textit{input/output block}}
 \newacronym{lut}{LUT}{Lookup-Tabelle}
+\newacronym{opencl}{OpenCL}{\textit{Open Computing Language}}
+\newacronym{openmp}{OpenMP}{\textit{Open Multi-Processing}}
 \newacronym{slr}{SLR}{\textit{super logic region}}
 
 \newglossaryentry{cuda}{name = CUDA,
@@ -32,10 +36,6 @@
                         description = {Alpaka- und SYCL-Bezeichnung für den Teil des Rechners, der den Kontrollfluss steuert}}
 \newglossaryentry{iigls}{name = Initiation Interval,
                          description = {Anzahl der Zyklen zwischen dem Ausführungsbeginn aufeinanderfolgender Schleifeniterationen}}
-\newglossaryentry{opencl}{name = OpenCL,
-                          description = {\textit{Open Computing Language}, offener Standard für die Programmierung von Beschleunigern}}
-\newglossaryentry{openmp}{name = OpenMP,
-                          description = {\textit{Open Multi-Processing}, offener Standard für die Shared-Memory-Programmierung}}
 \newglossaryentry{spir}{name = SPIR,
                         description = {\textit{Standard Portable Intermediate Language}, offene Zwischencode-Sprache}}
 \newglossaryentry{sycl}{name = SYCL,
